sjeng/use_undefined_identifier/c0/l_king_mobility
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/l_king_mobility/src/leval.c:562:12: error: use of undeclared identifier 'l_king_mobility_king_o'
if ( board[l_king_mobility_king_o[d] + square] == 13 ) 
           ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/l_king_mobility/src/obj/leval.o] Error 1
